fixed login/register
