# backend/src/sys/auth/dto.ts
@@ -1,66 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-import { IsDate, IsEmail, IsNotEmpty, IsString, MinLength } from 'class-validator';
-
-export class LoginDto {
-  @ApiProperty({ example: 'user@example.com' })
-  @IsEmail()
-  @IsNotEmpty()
-  email: string;
-
-  @ApiProperty({ example: 'password123' })
-  @IsString()
-  @IsNotEmpty()
-  @MinLength(6)
-  password: string;
-}
-
-export class RegisterDto {
-  @ApiProperty({ example: 'user@example.com' })
-  @IsEmail()
-  @IsNotEmpty()
-  email: string;
-
-  @ApiProperty({ example: 'John' })
-  @IsString()
-  @IsNotEmpty()
-  firstName: string;
-
-  @ApiProperty({ example: 'Doe' })
-  @IsString()
-  @IsNotEmpty()
-  lastName: string;
-
-  @ApiProperty({ example: 'password123' })
-  @IsString()
-  @IsNotEmpty()
-  @MinLength(6)
-  password: string;
-
-  @ApiProperty({ example: 'active' })
-  @IsString()
-  @IsNotEmpty()
-  status: string;
-
-  @ApiProperty({ example: '2025-01-01' })
-  @IsDate()
-  @IsNotEmpty()
-  lastLogin: Date;
-
-  // @ApiProperty({ example: 'PLAYER' })
-  // @IsNotEmpty()
-  // role: components['schemas']['SysUserRole'];
-}
-
-export class TokenResponseDto {
-  @ApiProperty()
-  access_token: string;
-
-  @ApiProperty()
-  user: {
-    id: string;
-    email: string;
-    firstName: string;
-    lastName: string;
-    // role: components['schemas']['SysUserRole'];
-  };
-}
