# backend/src/sys/auth/dto/register.dto.ts
@@ -1,0 +1,12 @@
+import { IsEmail, IsString, MinLength } from 'class-validator';
+
+export class RegisterDto {
+  @IsEmail()
+  email: string;
+
+  @IsString()
+  @MinLength(6)
+  password: string;
+
+  name?: string;
+}
